I altered the html file to have all the right boxes instead of just filler text. There are still problems with how it looks, but after adding the correct dimensions to the css file for pixel length on all the parts, it's finally starting to come together. I still need to get the correct fonts for all of the text, as well as get the right look on the button. The alignment still needs work as well. I am now caught up on commits to the work that I had done offline, so my commits should be more often now that it won't be such a pain to keep revision history.

--- a/project01/css/learning.css
+++ b/project01/css/learning.css
@@ -108,10 +108,11 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 	margin: 0 auto;
 	/*padding: 2.5em 0 0 0;*/
 	background: #CCCCCC;
+	float:left;
 }
 
 	#BigTitle h1{font-size: 3.571em; line-height: .6;}
-	#BigTitle h5{font-size: 0.36em; color:#666666;}
+	#BigTitle h5{font-size: 1.5em; color:#666666;}
 	/*
 	#BigTitle h1 a:link, #BigTitle h1 a:visited {
 		color: #123456;
@@ -156,6 +157,11 @@ img.left, figure.left {float: right; margin: 0 0 2em 2em;}
 	text-decoration: none;
 }
 	
+#feeling {
+	float: left;
+	background: #FCFCFC;
+}	
+
 #feeling .feelerator	{
 	background: #FCFCFC
 	margin: 0px;
